--- a/app/globals.css
+++ b/app/globals.css
@@ -50,13 +50,17 @@ h2 {
 }
 
 p {
-  font-size: 1.5rem;
   cursor: pointer;
+}
+
+.teaser-text {
+  font-size: 1.5rem;
+  margin-top: 1rem;
   opacity: 0.9;
   transition: transform 0.3s ease;
 }
 
-p:hover {
+.teaser-text:hover {
   transform: scale(1.1);
 }
 
