--- a/app/globals.css
+++ b/app/globals.css
@@ -26,13 +26,6 @@ main {
   width: 100%;
 }
 
-.content-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  cursor: pointer;
-}
-
 h1 {
   font-size: 4rem;
   font-weight: bold;
@@ -42,11 +35,21 @@ h1 {
   margin-bottom: 1rem;
 }
 
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  padding: 0 20%;
+  width: 100%;
+}
+
 h2 {
   font-size: 3rem;
   font-weight: 600;
   text-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
   margin-bottom: 2rem;
+  line-height: 1.2;
 }
 
 p {
